Issue 17: added string templating function to string prototype as an alternative to the + operator.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js"></script>-->
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.js"></script>
+      <script src="scripts/proto_extensions.js"></script>
       <script src="scripts/app.js"></script>
       <script src="scripts/controllers.js"></script>
       <script src="scripts/angular-leaflet-directive.min.js"></script>
